configure ingress and changes required

--- a/argo-cd/values.yaml
+++ b/argo-cd/values.yaml
@@ -2,7 +2,7 @@ argo-cd:
   global:
     # -- Default domain used by all components
     ## Used for ingresses, certificates, SSO, notifications, etc.
-    domain: argocd.example.com
+    domain: argocd-dev.techsecoms.com
 
   configs:
     secret:
@@ -10,7 +10,7 @@ argo-cd:
       createSecret: true
     cm:
       # required when SSO is enabled
-      url: "https://argocd.example.com"
+      url: "https://argocd.techsecoms.com"
       exec.enabled: true
       resource.exclusions: |
         - apiGroups:
@@ -62,8 +62,8 @@ argo-cd:
 
     # -- Enable after nginx-ingress is installed
     ingress:
-      enabled: false
-      hostname: "argocd.example.com"
+      enabled: true
+      hostname: "argocd.techsecoms.com"
 
   # Disabled for multitenancy env with single instance deployment
   # applicationSet:
