--- a/clusters/core/bootstrap-addons.yaml
+++ b/clusters/core/bootstrap-addons.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    server: https://kubernetes.default.svc
+    server: https://kubernetes.argocd.svc
   project: core
   source:
     path: clusters/core/apps
