--- a/clusters/core/addons/keycloak-postgresql/values.yaml
+++ b/clusters/core/addons/keycloak-postgresql/values.yaml
@@ -27,7 +27,7 @@ eso:
   # -- Install components of the ESO.
   enabled: true
   # -- Defines provider type. One of `aws` or `generic`.
-  type: "aws"
+  type: "generic"
   # -- Defines Secret Store name.
   secretStoreName: "aws-parameterstore-kk-postgress"
   # -- Value name in AWS ParameterStore, AWS SecretsManager or other Secret Store.
