--- a/clusters/core/addons/dependency-track/values.yaml
+++ b/clusters/core/addons/dependency-track/values.yaml
@@ -7,10 +7,10 @@ dependency-track:
     image:
       # we override the default image tag here, since the helm chart is a little behind
       tag: 4.11.3
-    apiBaseUrl: "https://deptrack.example.com"
+    apiBaseUrl: "https://deptrack.techsecoms.com"
     extraEnv:
       - name: OIDC_ISSUER
-        value: "https://keycloak.example.com/auth/realms/shared"
+        value: "https://keycloak.techsecoms.com/auth/realms/shared"
       - name: OIDC_CLIENT_ID
         value: "deptrack"
       - name: OIDC_SCOPE
@@ -53,7 +53,7 @@ dependency-track:
       - name: ALPINE_OIDC_CLIENT_ID
         value: "deptrack"
       - name: ALPINE_OIDC_ISSUER
-        value: "https://keycloak.example.com/auth/realms/shared"
+        value: "https://keycloak.techsecoms.com/auth/realms/shared"
       - name: ALPINE_OIDC_USERNAME_CLAIM
         value: "preferred_username"
       - name: ALPINE_OIDC_USER_PROVISIONING
@@ -78,7 +78,7 @@ dependency-track:
       kubernetes.io/ingress.class: nginx
       # allow large bom.xml uploads:
       nginx.ingress.kubernetes.io/proxy-body-size: 10m
-    hostname: deptrack.example.com
+    hostname: deptrack.techsecoms.com
 
 oidc:
   enabled: false
