--- a/clusters/core/addons/harbor-ha/values.yaml
+++ b/clusters/core/addons/harbor-ha/values.yaml
@@ -24,7 +24,7 @@ minio:
   mode: distributed
   ingress:
     enabled: true
-    hostname: 'minio-harbor.example.com'
+    hostname: 'minio-harbor.techsecoms.com'
   auth:
     existingSecret: 'minio-admin-ui'
     forceNewKeys: true
@@ -70,7 +70,7 @@ harbor:
       {
         "auth_mode": "oidc_auth",
         "oidc_name": "keycloak",
-        "oidc_endpoint": "https://keycloak.example.com/auth/realms/shared",
+        "oidc_endpoint": "https://keycloak.techsecoms.com/auth/realms/shared",
         "oidc_client_id": "harbor",
         "oidc_client_secret": "YOURSECRET",
         "oidc_groups_claim": "roles",
@@ -109,7 +109,7 @@ harbor:
           memory: 300Mi
 
   fullnameOverride: harbor
-  externalURL: https://registry.example.com
+  externalURL: https://registry.techsecoms.com
   ipFamily:
     # ipv6Enabled set to true if ipv6 is enabled in cluster, currently it affected the nginx related component
     ipv6:
@@ -120,7 +120,7 @@ harbor:
       enabled: false
     ingress:
       hosts:
-        core: registry.example.com
+        core: registry.techsecoms.com
 
   # Use recreate strategy to avoid registry volume stuck in mounting status
   updateStrategy:
@@ -178,7 +178,7 @@ eso:
   # -- Install components of the ESO.
   enabled: true
   # -- Defines provider type. One of `aws` or `generic`.
-  type: "aws"
+  type: "generic"
   # -- Defines Secret Store name.
   secretStoreName: "aws-parameterstore"
   # -- Value name in AWS ParameterStore, AWS SecretsManager or other Secret Store.
