--- a/clusters/core/apps/values.yaml
+++ b/clusters/core/apps/values.yaml
@@ -83,8 +83,8 @@ harbor:
 
 # Harbor with High Availability
 harbor-ha:
-  createNamespace: false
-  enable: false
+  createNamespace: true
+  enable: true
 
 # Harbor with HA, OKD Cluster
 harbor-ha-okd:
