--- a/clusters/core/bootstrap-addons.yaml
+++ b/clusters/core/bootstrap-addons.yaml
@@ -13,7 +13,7 @@ spec:
     path: clusters/core/apps
     repoURL: https://github.com/Techsecom/edp-cluster-add-ons.git
     targetRevision: HEAD
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
