--- a/clusters/core/addons/harbor-ha/values.yaml
+++ b/clusters/core/addons/harbor-ha/values.yaml
@@ -178,7 +178,7 @@ oidc:
 # Configure components of the External Secrets Operator (ESO).
 eso:
   # -- Install components of the ESO.
-  enabled: true
+  enabled: false
   # -- Defines provider type. One of `aws` or `generic`.
   type: "generic"
   # -- Defines Secret Store name.
