--- a/clusters/core/apps/values.yaml
+++ b/clusters/core/apps/values.yaml
@@ -155,8 +155,8 @@ report-portal:
   enable: false
 
 prometheus-operator:
-  createNamespace: false
-  enable: false
+  createNamespace: true
+  enable: true
 
 redis-operator:
   createNamespace: true
