--- a/clusters/core/addons/harbor-ha/templates/external-secrets/externalsecret-minio-root-admin-ui.yaml
+++ b/clusters/core/addons/harbor-ha/templates/external-secrets/externalsecret-minio-root-admin-ui.yaml
@@ -1,27 +1,8 @@
-{{- if .Values.eso.enabled }}
-{{- $secretName := .Values.eso.secretName }}
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
+apiVersion: v1
+kind: Secret
 metadata:
   name: minio-admin-ui
-spec:
-  refreshInterval: 1h
-  secretStoreRef:
-    kind: SecretStore
-    name: {{ .Values.eso.secretStoreName }}
-  data:
-  - secretKey: root-user
-    remoteRef:
-      conversionStrategy: Default
-      decodingStrategy: None
-      key: {{ $secretName }}
-      metadataPolicy: None
-      property: minio.ROOT_USER
-  - secretKey: root-password
-    remoteRef:
-      conversionStrategy: Default
-      decodingStrategy: None
-      key: {{ $secretName }}
-      metadataPolicy: None
-      property: minio.ROOT_PASSWORD
-{{- end }}
+type: Opaque
+data:
+  root-user: YWRtaW4=
+  root-password: Y2FuaXNlZVVAMQ==
