--- a/clusters/core/addons/harbor-ha/templates/external-secrets/externalsecret-centralized-minio-users.yaml
+++ b/clusters/core/addons/harbor-ha/templates/external-secrets/externalsecret-centralized-minio-users.yaml
@@ -1,38 +1,7 @@
-{{- if .Values.eso.enabled }}
-{{- $secretName := .Values.eso.secretName }}
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
+apiVersion: v1
+kind: Secret
 metadata:
   name: centralized-minio-users
-spec:
-  refreshInterval: 1h
-  secretStoreRef:
-    kind: SecretStore
-    name: {{ .Values.eso.secretStoreName }}
-  target:
-    template:
-      engineVersion: v2
-      data:
-        username1: |
-          username={{ printf "{{ .REGISTRY_STORAGE_S3_ACCESSKEY }}" }}
-          password={{ printf "{{ .REGISTRY_STORAGE_S3_SECRETKEY }}" }}
-          disabled=false
-          policies=harbor
-          setPolicies=false
-
-  data:
-    - secretKey: REGISTRY_STORAGE_S3_ACCESSKEY
-      remoteRef:
-        conversionStrategy: Default
-        decodingStrategy: None
-        key: {{ $secretName }}
-        metadataPolicy: None
-        property: s3-user.ACCESSKEY
-    - secretKey: REGISTRY_STORAGE_S3_SECRETKEY
-      remoteRef:
-        conversionStrategy: Default
-        decodingStrategy: None
-        key: {{ $secretName }}
-        metadataPolicy: None
-        property: s3-user.SECRETKEY
-{{- end }}
+type: Opaque
+data:
+  username1: dXNlcm5hbWU9aGFyYm9yCnBhc3N3b3JkPWNhbmlzZWVVQDEzMgpkaXNhYmxlZD1mYWxzZQpwb2xpY2llcz1oYXJib3IKc2V0UG9saWNpZXM9ZmFsc2U=
