--- a/clusters/core/addons/harbor-ha/templates/external-secrets/externalsecret-harbor-s3.yaml
+++ b/clusters/core/addons/harbor-ha/templates/external-secrets/externalsecret-harbor-s3.yaml
@@ -1,27 +1,8 @@
-{{- if .Values.eso.enabled }}
-{{- $secretName := .Values.eso.secretName }}
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
+apiVersion: v1
+kind: Secret
 metadata:
   name: harbor-s3
-spec:
-  refreshInterval: 1h
-  secretStoreRef:
-    kind: SecretStore
-    name: {{ .Values.eso.secretStoreName }}
-  data:
-  - secretKey: REGISTRY_STORAGE_S3_ACCESSKEY
-    remoteRef:
-      conversionStrategy: Default
-      decodingStrategy: None
-      key: {{ $secretName }}
-      metadataPolicy: None
-      property: s3-user.ACCESSKEY
-  - secretKey: REGISTRY_STORAGE_S3_SECRETKEY
-    remoteRef:
-      conversionStrategy: Default
-      decodingStrategy: None
-      key: {{ $secretName }}
-      metadataPolicy: None
-      property: s3-user.SECRETKEY
-{{- end }}
+type: Opaque
+data:
+  REGISTRY_STORAGE_S3_ACCESSKEY: YWRtaW4=
+  REGISTRY_STORAGE_S3_SECRETKEY: Y2FuaXNlZVVAMQ==
