--- a/clusters/core/addons/harbor-ha/templates/external-secrets/externalsecret-redis-creds.yaml
+++ b/clusters/core/addons/harbor-ha/templates/external-secrets/externalsecret-redis-creds.yaml
@@ -1,20 +1,7 @@
-{{- if .Values.eso.enabled }}
-{{- $secretName := .Values.eso.secretName }}
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
+apiVersion: v1
+kind: Secret
 metadata:
   name: redis-creds
-spec:
-  refreshInterval: 1h
-  secretStoreRef:
-    kind: SecretStore
-    name: {{ .Values.eso.secretStoreName }}
-  data:
-    - secretKey: REDIS_PASSWORD
-      remoteRef:
-        conversionStrategy: Default
-        decodingStrategy: None
-        key: {{ $secretName }}
-        metadataPolicy: None
-        property: redis.REDIS_PASSWORD
-{{- end }}
+type: Opaque
+data:
+  REDIS_PASSWORD: Y2FuaXNlZVVAMQ==
