--- a/clusters/core/apps/templates/harbor-ha.yaml
+++ b/clusters/core/apps/templates/harbor-ha.yaml
@@ -4,6 +4,9 @@ kind: Application
 metadata:
   name: {{ .Values.destinationServer}}-harbor-ha
   namespace: {{ .Values.argoNamespace | default "argocd" }}
+  labels:
+    goldilocks.fairwinds.com/enabled: "true"
+    pod-security.kubernetes.io/enforce: privileged
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
