--- a/clusters/core/apps/templates/argo-cd.yaml
+++ b/clusters/core/apps/templates/argo-cd.yaml
@@ -26,4 +26,8 @@ spec:
         duration: 5s
         factor: 2
         maxDuration: 1m
+  namespaceMetadata:
+    labels:
+      goldilocks.fairwinds.com/enabled: "true"
+      pod-security.kubernetes.io/enforce: privileged
 {{- end -}}
