--- a/clusters/core/apps/templates/minio-operator.yaml
+++ b/clusters/core/apps/templates/minio-operator.yaml
@@ -29,8 +29,9 @@ spec:
         duration: 5s
         factor: 2
         maxDuration: 1m
-  namespaceMetadata:
-    labels:
-      goldilocks.fairwinds.com/enabled: "true"
-      pod-security.kubernetes.io/enforce: privileged
+  namespace:
+    metadata:
+      labels:
+        goldilocks.fairwinds.com/enabled: "true"
+        pod-security.kubernetes.io/enforce: privileged
 {{- end -}}
