--- a/clusters/core/apps/templates/dependency-track.yaml
+++ b/clusters/core/apps/templates/dependency-track.yaml
@@ -18,6 +18,9 @@ spec:
     name: {{ .Values.destinationServer | default "in-cluster" }}
     namespace: dependency-track
   syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace={{ (index .Values "dependency-track" "createNamespace") }}
     retry:
