--- a/clusters/core/apps/templates/minio-operator.yaml
+++ b/clusters/core/apps/templates/minio-operator.yaml
@@ -21,6 +21,9 @@ spec:
     helm:
       releaseName: minio-operator
   syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace={{ (index .Values "minio-operator" "createNamespace") }}
     retry:
