--- a/clusters/core/apps/templates/nexus-operator.yaml
+++ b/clusters/core/apps/templates/nexus-operator.yaml
@@ -21,6 +21,9 @@ spec:
     name: {{ .Values.destinationServer | default "in-cluster" }}
     namespace: nexus
   syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace={{ (index .Values "nexus-operator" "createNamespace") }}
     retry:
