--- a/clusters/core/apps/templates/external-secrets.yaml
+++ b/clusters/core/apps/templates/external-secrets.yaml
@@ -21,6 +21,9 @@ spec:
     name: {{ .Values.destinationServer | default "in-cluster" }}
     namespace: external-secrets
   syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
     - CreateNamespace={{ (index .Values "external-secrets" "createNamespace") }}
     retry:
