--- a/clusters/core/apps/templates/krakend.yaml
+++ b/clusters/core/apps/templates/krakend.yaml
@@ -21,6 +21,9 @@ spec:
     name: {{ .Values.destinationServer | default "in-cluster" }}
     namespace: krakend
   syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace={{ .Values.krakend.createNamespace }}
     retry:
