--- a/clusters/core/apps/templates/report-portal.yaml
+++ b/clusters/core/apps/templates/report-portal.yaml
@@ -21,6 +21,9 @@ spec:
     name: {{ .Values.destinationServer | default "in-cluster" }}
     namespace: report-portal
   syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace={{ (index .Values "report-portal" "createNamespace") }}
     retry:
